deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rota-maravilhosa
  labels:
    environment: production
    name: rota-maravilhosa
    app.kubernetes.io/managed-by: kubectl
    pod-security.kubernetes.io/enforce: restricted 
    pod-security.kubernetes.io/audit: restricted 
    pod-security.kubernetes.io/warn: restricted
