deployment/kubernetes/keycloak-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-lb
  namespace: rota-maravilhosa
spec:
  type: LoadBalancer
  selector:
    app: keycloak
  ports:
  - port: 8080
    targetPort: 8080
